--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,5 +1,14 @@
 .App {
+  width:100%;
+  height:100%;
+  min-height: 100%;
   text-align: center;
+}
+
+.game {
+  width:100%;
+  min-height: 100%;
+  height:100%;
 }
 
 .App-logo {
