--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -3,12 +3,22 @@
   height:100%;
   min-height: 100%;
   text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .game {
   width:100%;
   min-height: 100%;
   height:100%;
+}
+
+.active-page{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  height: 100%;
 }
 
 .App-logo {
@@ -44,4 +54,50 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  font-family: 'Roboto Slab', serif;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 10px;
+  padding-top: 8px;
+  border-bottom: solid;
+  border-width: 3px;
+  border-color: #E5E5E5;
+}
+
+.title {
+  font-size: 40px;
+  color: #398832;
+  margin-left: 30px;
+}
+
+.tabs {
+  margin-right: 30px;
+  width: 15%;
+  font-size: 25px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.tab {
+  padding: 5px;
+  border-bottom: solid;
+  border-width: 3px;
+  border-color: transparent;
+}
+
+.selected {
+  border-bottom: solid;
+  border-width: 3px;
+  border-color: #9e61c9;
+}
+
+.about-page {
+  width: 100%;
+  height: 100%;
 }
